[package]
name = "l2_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
ipnet = { version = "2.7.1", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
